--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     padding: 2rem;
     text-align: center;
     background-color: white;
-    border-color: 1px solid #ddd;
+    border: 1px solid #ddd;
 }
 
 .header h1 {
