--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,24 +1,87 @@
 .navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  background-color: #ffffff;
-  border-bottom: 1px solid #eaeaea;
+
+  padding: 1rem 2rem;
+  background-color: #e1dbf4;
+  border-bottom: 2px solid transparent;
+  border-image: linear-gradient(
+    var(--color-primary),
+    #ab8aec6f
+  ) 1;
 }
 
 .logo {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 600;
+  color: var(--color-dark);
 }
 
+/* links desktop */
 .nav-links {
   display: flex;
-  gap: 20px;
+  gap: 1.5rem;
   list-style: none;
 }
 
 .nav-links a {
   text-decoration: none;
-  color: #333;
+  font-size: 0.95rem;
+  color: var(--color-text);
+}
+
+.nav-links a:hover {
+  color: var(--color-primary);
+}
+
+/* botón hamburguesa */
+.menu-btn {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+/* ---------- RESPONSIVE ---------- */
+@media (max-width: 768px) {
+  .navbar {
+    justify-content: center;
+    position: relative;
+  }
+
+  .logo {
+    text-align: center;
+  }
+
+  .menu-btn {
+    display: block;
+    position: absolute;
+    right: 1.5rem;
+  }
+
+  .nav-links {
+    position: absolute;
+    top: 100%;
+    left: 0;
+
+    width: 100%;
+    background-color: #e1dbf4;
+
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+
+    padding: 1rem 0;
+    display: none;
+  }
+
+  .nav-links.open {
+    display: flex;
+  }
 }
