Feat: definiendo estilo global

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,7 +1,7 @@
 .contact {
   padding: 2rem 1rem;
   text-align: center;
-  background-color: #f3eef7;
+  background-color: #e1dbf46e;
   border-top: 1px solid var(--color-border);
 }
 
